--- a/Clase-Grid/style.css
+++ b/Clase-Grid/style.css
@@ -34,6 +34,7 @@ body {
 .title {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  z-index: 10;
 }
 .title:hover {
   color: rgba(50, 129, 255, 0.5);
@@ -48,7 +49,23 @@ body {
   background-color: coral;
   grid-column: 3 / 5;
   grid-row: 3 / 4;
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  top: 50px;
+  left: 200px;
+  animation: animacion 3s infinite;
 }
+
+@keyframes animacion {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .four {
   background-color: darkslategrey;
   grid-column: 1 / 5;
