--- a/Clase-Flex/style.css
+++ b/Clase-Flex/style.css
@@ -7,7 +7,7 @@ html, body {
   height: 100%;
 }
 body {
-  background-color: #d2d2d2;
+  background-color: #white;
 }
 .father {
   display: flex;
@@ -16,16 +16,16 @@ body {
 
   /* justify-content -- Modificamos los elementos hijos en su eje X (horizontalmente) */
   /* justify-content: flex-start; */
-  /* justify-content: flex-end; */
-  justify-content: center;
+  justify-content: flex-end;
+  /* justify-content: center; */
   /* justify-content: space-between; */
   /* justify-content: space-around; */
   /* justify-content: space-evenly; */
 
   /* align-items -- Modificamos los elementos hijos en su eje Y (verticalmente)*/
   /* align-items: flex-start; */
-  align-items: center;
-  /* align-items: flex-end; */
+  /* align-items: center; */
+  align-items: flex-end;
   /* align-items: stretch; */ /* el valor stretch solo funciona si el o los elementos no tienen un alto definido */
 
   /* flex-wrap -- Permite controlar el comportamiento del ancho de los elementos hijos */
@@ -66,4 +66,13 @@ body {
 }
 .four {
   order: 3;
+}
+.miImagen {
+  width: 300px;
+}
+.image-container {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  align-items: center;
 }
