--- a/Asesorias/Alison/estilos/index.css
+++ b/Asesorias/Alison/estilos/index.css
@@ -1,9 +1,11 @@
 .images-container{
   display: grid;
+  grid-gap: 50px;
   grid-template-columns: repeat(3, 1fr);
 }
 img {
-  width: 300px;
+  width: 100%;
+
 }
 #no-hay {
   display: none;
