--- a/Asesorias/Juan-Marco/style.css
+++ b/Asesorias/Juan-Marco/style.css
@@ -9,3 +9,11 @@
   margin-left: -50px;
   z-index: 10;
 }
+
+.bg-img {
+  height: 500px;
+  width: 100%;
+  background-image: url('../../juego/images/stone.png');
+  background-position: center;
+  background-size: cover;
+}
