--- a/Asesorias/Alison/estilos/index.css
+++ b/Asesorias/Alison/estilos/index.css
@@ -1,12 +1,27 @@
-.images-container{
+.encabezado {
+  text-align: center;
+}
+.input {
+  display: inline-block;
+  margin: 15px 0;
+}
+.images-container {
   display: grid;
+  margin-top: 60px;
   grid-gap: 50px;
   grid-template-columns: repeat(3, 1fr);
 }
 img {
   width: 100%;
-
 }
 #no-hay {
   display: none;
+}
+.image {
+  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+}
+#btn {
+  display: block;
+  margin: 0 auto;
 }
